--- a/contacto.html
+++ b/contacto.html
@@ -65,24 +65,23 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#header">Home<span
+                        <a class="nav-link" href="index.html#header">Home<span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <div class="nav-link dropdown-toggle" id="dropdown-solutions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown-solutions">
-                                <a class="dropdown-item" href="erp.html">ERP</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="efactura.html">Facturación</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
-                            </div>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item" href="erp.html">ERP</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="parking.html">Parking y control de acceso</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="efactura.html">Facturación</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="cobranzas.html">Cobranzas</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="ecommerce.html">E-Commerce</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="contacto.html">Desarrollos a Medida</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -92,18 +91,17 @@
                         <a class="nav-link page-scroll" href="index.html#clientes">Clientes</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <div class="nav-link dropdown-toggle" id="dropdown-us" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown-us">
-                                <a class="dropdown-item" href="nosotros.html">Quienes soomos</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
-                            </div>
+                        <a href="#" class="nav-link dropdown-toggle" id="dropdown-us" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown-us">
+                            <a class="dropdown-item" href="nosotros.html">Quienes soomos</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="index.html#contact">Contacto</a>
+                        <a class="nav-link page-scroll" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -123,7 +121,7 @@
                     <h2 class="h2-heading ">¿Quiere saber más? ¡Escríbanos!</h2>
                     <ul class="list-unstyled li-space-lg ">
                         <li><img src="images/adress-icon.png" alt="Dirección"> Av. Rivadavia 1523, Buenos Aires, ARG</li>
-                        <li><img src="images/whatsapp-icon.png" alt="WhatsApp"> <a target="_blank" href="https://wa.me/5491131698888">+54(11) 3169-8888</a></li>
+                        <li><img src="images/telephone-icon.png" alt="Telephone">+54 (11) 3169-8888</li>
                         <li><img src="images/mail-icon.png" alt="Mail"> <a target="_blank" href="mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
                     </ul>
                 </div>
