--- a/parking.html
+++ b/parking.html
@@ -145,7 +145,7 @@
                         </li>
                     </ul>
                 </div>
-                <p><a href="contacto.html">Estacionamiento Guiado</a></p>
+                <p><a class="popup-with-move-anim" href="#parkguiado-lightbox">Estacionamiento Guiado</a></p>
             </div>
             <div class="col-lg-6">
                 <ul class="list-unstyled li-space-lg">
@@ -284,7 +284,7 @@
             </div>
             <div class="col-lg-12">
                 <br>
-                <p>Si decide incorporar nuestro <a href="https://addsa.com.ar/estacionamiento-guiado.html">sistema de estacionamiento guiado</a>, que permite una identificación altamente fiable de cada vehículo a través de reconocimiento de matrícula, podrá
+                <p>Si decide incorporar nuestro <a class="popup-with-move-anim" href="#parkguiado-lightbox">sistema de estacionamiento guiado</a>, que permite una identificación altamente fiable de cada vehículo a través de reconocimiento de matrícula, podrá
                     además:
                 </p>
             </div>
@@ -410,6 +410,94 @@
         </div>
         <!-- end of row -->
     </div>
+
+    <!-- Parking Guiado Lightbox -->
+    <div id="parkguiado-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
+        <div class="row">
+            <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
+            <div class="col-lg-12">
+                <h1>Estacionamiento guiado</h1><br>
+                <p>La funcionalidad PGS (PARKING GUIDANCE SYSTEM) de ADD-Park es un sistema de <b>guiado de estacionamiento</b>, donde la detección de los vehículos se realiza a través del reconocimiento de matrículas/patentes (LPR) en sectores determinados
+                    del parking. Esta funcionalidad <b>mejora la seguridad y la movilidad dentro del parking</b>, ya que cada sensor actúa como una cámara de video vigilancia que permite la grabación y la visualización de todos los eventos que ocurren
+                    en / alrededor del sector que controla.</p>
+                <img class="img-fluid" src="images/parking-guidance.png" alt="Parking Guidance"><br>
+                <br><br>
+                <p>La cámara para reemplazar el sensor ultrasónico. Un detector tipo consta de dos cámaras, colocadas espalda con espalda. Cada cámara es capaz de observar un máximo de tres bahías de estacionamiento, por lo que el máximo de 6 puede ser controlado
+                    por un conjunto.</p><br><br>
+                <img class="img-fluid" width="100%" src="images/parking-implementation.png" alt="Parking Implementation"><br>
+                <br>
+                <h3>Beneficios de utilizar ADD-Park GPS</h3><br>
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Conozca la ubicación exacta del vehículo a través del reconocimiento de matrícula, lo cual le permitirá guiar al cliente en caso de que haya olvidado dónde dejó su vehículo.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Cuente con información sobre la <b>disponibilidad de las plazas</b> en cada sector, y establezca un <b>sistema tarifario según la ubicación y el tipo de las plazas</b>. </div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">El sistema de video vigilancia en cada plaza activada por detección de movimiento incrementa la seguridad, previniendo robos y posibles reclamos.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Cuente con información completa de todos los movimientos de los vehículos y grabación vídeo de todos los eventos que ocurren en / alrededor del parking.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">El sistema de guiado del parking proporciona una mejor experiencia al usuario, ¡basta de dar vueltas por el parking buscando plaza vacía!</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Controle el parking en su totalidad en forma remota, mejorando así la gestión global del estacionamiento.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Detecte <b>incidentes</b> y mejore el control mediante <b>alarmas</b>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Usted elige quién puede ingresar mediante la creación de <b>listas blancas y negras</b>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Ofrezca <b>reserva en línea</b> de la plaza de aparcamiento a través de la matrícula.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Entrada/salida <b>automática</b> para <b>clientes abonados</b>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Detección de intercambio de tickets y búsqueda de <b>tickets perdidos</b>.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Prevención</b> del acceso fraudulento.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Control</b> de los vehículos por la noche.</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body">Múltiples filtros para buscar <b>información</b> del vehículo (por matrícula, número de ticket, etc.).</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas">&bullet;</i>
+                        <div class="media-body"><b>Estadísticas</b> de uso e información de marketing. </div>
+                    </li>
+                </ul>
+                <br>
+                <p>Solicite las <a href="contacto.html">especificaciones técnicas</a> para información más detallada.</p><br>
+                <p>ADD-Park GPS se puede utilizar en: Aeropuertos, terminales de ómnibus, centros comerciales, universidades, instituciones públicas, terminales de carga y descarga, controles de ingreso a Silos.</p>
+            </div>
+            <!-- end of col -->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of Parking Guiado Lightbox -->
 
     <!-- Footer -->
     <div class="footer ">
