Park Modif, & Phone Numer Modif

--- a/parking.html
+++ b/parking.html
@@ -417,16 +417,16 @@
             <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
             <div class="col-lg-12">
                 <h1>Estacionamiento guiado</h1><br>
-                <p>La funcionalidad PGS (PARKING GUIDANCE SYSTEM) de ADD-Park es un sistema de <b>guiado de estacionamiento</b>, donde la detección de los vehículos se realiza a través del reconocimiento de matrículas/patentes (LPR) en sectores determinados
+                <p>La funcionalidad PGS (PARKING GUIDANCE SYSTEM) de ADDPark es un sistema de <b>guiado de estacionamiento</b>, donde la detección de los vehículos se realiza a través del reconocimiento de matrículas/patentes (LPR) en sectores determinados
                     del parking. Esta funcionalidad <b>mejora la seguridad y la movilidad dentro del parking</b>, ya que cada sensor actúa como una cámara de video vigilancia que permite la grabación y la visualización de todos los eventos que ocurren
                     en / alrededor del sector que controla.</p>
                 <img class="img-fluid" src="images/parking-guidance.png" alt="Parking Guidance"><br>
                 <br><br>
-                <p>La cámara para reemplazar el sensor ultrasónico. Un detector tipo consta de dos cámaras, colocadas espalda con espalda. Cada cámara es capaz de observar un máximo de tres bahías de estacionamiento, por lo que el máximo de 6 puede ser controlado
+                <p>La cámara reemplaza el sensor ultrasónico. Un detector tipo consta de dos cámaras, colocadas espalda con espalda. Cada cámara es capaz de observar un máximo de tres bahías de estacionamiento, por lo que el máximo de 6 puede ser controlado
                     por un conjunto.</p><br><br>
                 <img class="img-fluid" width="100%" src="images/parking-implementation.png" alt="Parking Implementation"><br>
                 <br>
-                <h3>Beneficios de utilizar ADD-Park GPS</h3><br>
+                <h3>Beneficios de utilizar ADDPark PGS</h3><br>
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
                         <i class="fas">&bullet;</i>
@@ -491,7 +491,7 @@
                 </ul>
                 <br>
                 <p>Solicite las <a href="contacto.html">especificaciones técnicas</a> para información más detallada.</p><br>
-                <p>ADD-Park GPS se puede utilizar en: Aeropuertos, terminales de ómnibus, centros comerciales, universidades, instituciones públicas, terminales de carga y descarga, controles de ingreso a Silos.</p>
+                <p>ADDPark PGS se puede utilizar en: Aeropuertos, terminales de ómnibus, centros comerciales, universidades, instituciones públicas, terminales de carga y descarga, controles de ingreso a Silos.</p>
             </div>
             <!-- end of col -->
         </div>
