--- a/contacto.html
+++ b/contacto.html
@@ -121,7 +121,7 @@
                     <h2 class="h2-heading ">¿Quiere saber más? ¡Escríbanos!</h2>
                     <ul class="list-unstyled li-space-lg ">
                         <li><img src="images/adress-icon.png" alt="Dirección"> Av. Rivadavia 1523, Buenos Aires, ARG</li>
-                        <li><img src="images/telephone-icon.png" alt="Telephone">+54 (11) 3169-8888</li>
+                        <li><img src="images/telephone-icon.png" alt="Telephone">+54 011 5217-7807</li>
                         <li><img src="images/mail-icon.png" alt="Mail"> <a target="_blank" href="mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
                     </ul>
                 </div>
