--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
+                        <a href="#" class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Soluciones</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="erp.html">ERP</a>
                             <div class="dropdown-divider"></div>
@@ -339,7 +339,7 @@
                 <!-- end of col -->
                 <div class="col-lg-6 form-iframe">
                     <!-- Contact Form -->
-                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650" div class="nav-link dropdown-toggle" style="border:0;width:100%"></iframe>
+                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650" style="border:0;width:100%"></iframe>
                     <!-- end of contact form -->
                 </div>
                 <!-- end of col -->
