--- a/erp.html
+++ b/erp.html
@@ -93,7 +93,7 @@
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" id="dropdown-us" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown-us">
-                            <a class="dropdown-item" href="nosotros.html">Quienes soomos</a>
+                            <a class="dropdown-item" href="nosotros.html">Quienes somos</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
                             <div class="dropdown-divider"></div>
