--- a/parking.html
+++ b/parking.html
@@ -519,7 +519,7 @@
                             </a>
                         </span>
                         <span class="fa-stack ">
-                            <a href="https://www.instagram.com/" target=”_blank”>
+                            <a href="https://www.instagram.com/add.soluciones/" target=”_blank”>
                                 <img src="images/instagram.png" alt="Instagram">
                             </a>
                         </span>
