--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <h2 class="h2-heading ">¿Quiere saber más? ¡Escríbanos!</h2><br>
                     <ul class="list-unstyled li-space-lg ">
                         <li><img src="images/adress-icon.png" alt="Dirección"> Av. Rivadavia 1523, Buenos Aires, ARG</li>
-                        <li><img src="images/telephone-icon.png" alt="Telephone"> <a target="_blank" href="tel:+541152177807">+54 9 11 5217-7807</a> </li>
+                        <li><img src="images/telephone-icon.png" alt="Telephone"> <a target="_blank" href="tel:+541152177807">+54 11 5217-7807</a> </li>
                         <li><img src="images/mail-icon.png" alt="Mail"> <a target="_blank" href="mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
                     </ul>
                 </div>
