Apple Touch icon

--- a/efactura.html
+++ b/efactura.html
@@ -26,6 +26,9 @@
 
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+    <link rel="apple-touch-icon" href="images/add-icon-114.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="images/add-icon-72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="images/add-icon-114.png" />
 
     <!-- Google Analytics -->
     <script>
