--- a/index.html
+++ b/index.html
@@ -32,24 +32,23 @@
     <link rel="apple-touch-icon" sizes="72x72" href="images/add-icon-72.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="images/add-icon-114.png" />
 
-    <!-- Google Analytics -->
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 
-        ga('create', 'UA-93072024-1', 'auto');
-        ga('send', 'pageview');
+    <script async src=https://www.googletagmanager.com/gtag/js?id=UA-93072024-1></script>
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+
+
+        gtag('config', 'UA-93072024-1');
     </script>
-    <!-- End Google Analytics -->
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
