--- a/cobranzas.html
+++ b/cobranzas.html
@@ -146,7 +146,7 @@
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Múltiples medios de cobro: tarjetas de crédito y débito, pagos web y ATM (Pago Fácil, RapiPago, Pago Mis Cuentas, Mercado Pago, Dinero Mail), débito automático, por cbu, facilitan a sus clientes el proceso de pago .</div>
+                        <div class="media-body">Múltiples medios de cobro: tarjetas de crédito y débito, pagos web y ATM (Pago Fácil, RapiPago, Pago Mis Cuentas, Mercado Pago, Dinero Mail), débito automático por cbu, facilitan a sus clientes el proceso de pago.</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
